# space-game-xd

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs
asset_src/glsl_shaders/: line.frag  line.vert
assets/world/: map.ron
src/: asset_loader.rs  game.rs  main.rs  render.rs  window.rs  world.rs
src/render/: game_renderer.rs  mod.rs  polyline_renderer.rs
src/util/: mod.rs  serde_hell.rs
src/world/: game_world.rs  mod.rs  polyline.rs
